# UglyRAG

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  mkdocs.yml  pyproject.toml  tox.ini
eval/: __init__.py  eval.py  eval_rag.py  eval_retriever.py
eval/dataset/: dataset.py
eval/evaluator/: _bleu.py  evaluator.py  metrics.py  utils.py
examples/: eval.py  pipeline.py  rag_eval.py  retriever_eval.py
examples/indexes/: sample_data.jsonl
src/data/: stop_words.py
src/uglyrag/: __init__.py  _cli.py  _config.py  _embed.py  _index.py  _search.py  _segment.py  _singleton.py  _sqlite.py  _tokenize.py  config.py  db_manager.py  logger.py  search.py  singleton.py  utils.py
src/uglyrag/_database/: __init__.py  _database.py  _db_impl.py  _duckdb.py  _sqlite.py
src/uglyrag/_integrations/: __init__.py  _jina.py  fastembed.py  jieba.py  jina.py  regex_chunk.py
src/uglyrag/_modules/: _embed.py  _rerank.py  _segment.py  _split.py
src/uglyrag/_utils/: __init__.py  _chunk.py  _embed.py  _rerank.py  _segment.py
src/uglyrag/database/: __init__.py  _duckdb.py  _sqlite.py  base.py
src/uglyrag/integrations/: jieba.py  regex_chunk.py
src/uglyrag/modules/: _embed.py  _rerank.py  _segment.py  _split.py  embed.py  rerank.py  segment.py  split.py
tests/: conftest.py  test_chunk.py  test_config.py  test_db_manager.py  test_logger.py  test_search.py  test_segment.py  test_singleton.py
tests/_database/: test_base.py  test_database.py  test_duckdb.py  test_sqlite.py
tests/database/: test_base.py  test_duckdb.py  test_sqlite.py
tests/integrations/: test_regex_chunk.py
tests/modules/: test_embed.py  test_rerank.py  test_segment.py  test_split.py
uglyrag/: __init__.py  _sqlite.py  config.py  main.py  sqlite.py  utils.py
uglyrag/generator/: __init__.py  base.py  openai.py  openai_generator.py
uglyrag/generator/prompt/: __init__.py  base.py
uglyrag/judger/: __init__.py  base.py  llm_judger.py  skr.py
uglyrag/pipeline/: __init__.py  pipeline.py
uglyrag/refiner/: __init__.py  abstract.py  abstractive.py  base.py  extractive.py  llmlingua.py  selective_context.py
uglyrag/retriever/: __init__.py  base.py  bm25.py  chroma.py  sqlite.py
uglyrag/retriever/database/: __init__.py  base.py  documents.py
uglyrag/retriever/document/: __init__.py  base.py  default.py  doc.py  file.py  simple.py  webpage.py
uglyrag/retriever/document/text_splitter/: __init__.py  base.py  split_functions.py  token.py
uglyrag/retriever/query_rewrite/: __init__.py  base.py  default.py  hyde.py  step_back_prompting.py  sub_question.py
uglyrag/retriever/reranker/: __init__.py  base.py  bge.py  cohere.py
uglyrag/retriever/tokenizer/: __init__.py  base.py  jieba.py
uglyrag/utils/: config.py
