[build-system]  # https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]  # https://python-poetry.org/docs/pyproject/
authors = ["uglyboy <uglyboy@uglyboy.cn>"]
description = ""
name = "uglyrag"
readme = "README.md"
repository = "https://github.com/uglyboy-tl/UglyRAG"
version = "0.1.0"

[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
python = ">=3.10,<3.13"
appdirs = "^1.4.4"
sqlite-vec = "^0.1.6"
requests = "^2.32.3"
jieba-fast = {extras = ["jieba"], optional = true, version = "^0.53"}
fastembed = {extras = ["fastembed"], optional = true, version = "^0.4.2"}
duckdb = {extras = ["duckdb"], optional = true, version = "^1.1.3"}
tokenizers = "^0.21.0"

[tool.poetry.extras]
duckdb = ["duckdb"]
fastembed = ["fastembed"]
jieba = ["jieba-fast"]

[tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
pytest = "^8.2.2"
ruff = "^0.8.1"

[[tool.poetry.source]]
default = false
name = "my_mirror"
secondary = false
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[tool.ruff]
fix = true
line-length = 120  # YOLO
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.
quote-style = "double"  # Like Black, use double quotes for strings.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.

[tool.ruff.lint]
ignore = [
    "B905",  # `zip()` without an explicit `strict=` parameter
    "E402",  # module level import not at top of file
    "E501",  # conflicts with black
]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PTH",  # flake8-pathlib
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]
unfixable = [
    "B018",  # automatic fix might obscure issue
    "F601",  # automatic fix might obscure issue
    "F602",  # automatic fix might obscure issue
    "UP036",  # sometimes it's better to just noqa this
]

[tool.ruff.lint.isort]
forced-separate = ["tests"]
known-first-party = ["uglyrag"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"/*.py" = ["F401", "F403"]
"tests/*" = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.poetry.dependencies"]
table_keys = false
