[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend", "pdm-build-locked"]

[dependency-groups]
doc = [
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-material>=9.5.48",
    "mkdocs>=1.6.1",
]
lint = [
    "ruff>=0.8.2",
    "toml-sort>=0.24.2",
]
test = [
    "pytest>=8.3.4",
]

[project]
authors = [
    {email = "uglyboy@uglyboy.cn", name = "uglyboy"},
]
dependencies = [
    "appdirs>=1.4.4",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
]
description = ""
license = {text = "MIT"}
name = "uglyrag"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"

[project.optional-dependencies]
duckdb = [
    "duckdb>=1.1.3",
]
fastembed = [
    "fastembed>=0.4.2",
]
jieba = [
    "jieba-fast>=0.53",
]

[project.urls]
repository = "https://github.com/uglyboy-tl/UglyRAG"

[tool.codespell]
skip = '*.po, src/data/*'

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = true
mypy_path = "src"
namespace_packages = true

[tool.pdm.build]
excludes = ["./**/.git"]
includes = ["src/uglyrag"]
package-dir = "src"
source-includes = ["CHANGELOG.md", "LICENSE", "README.md", "tests"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
test = "pytest"

[tool.ruff]
fix = true
line-length = 120  # YOLO
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.format]
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.
line-ending = "auto"  # Like Black, automatically detect the appropriate line ending.
quote-style = "double"  # Like Black, use double quotes for strings.
skip-magic-trailing-comma = false  # Like Black, respect magic trailing commas.

[tool.ruff.lint]
ignore = [
    "B905",  # `zip()` without an explicit `strict=` parameter
    "E402",  # module level import not at top of file
    "E501",  # conflicts with black
]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PTH",  # flake8-pathlib
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]
unfixable = [
    "B018",  # automatic fix might obscure issue
    "F601",  # automatic fix might obscure issue
    "F602",  # automatic fix might obscure issue
    "UP036",  # sometimes it's better to just noqa this
]

[tool.ruff.lint.isort]
forced-separate = ["tests"]
known-first-party = ["uglyrag"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"/*.py" = ["F401", "F403"]
"tests/*" = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
no_footer_comments = true
no_header_comments = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
